# zavora-cli

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DOCUMENTATION_DISCREPANCIES.md  LICENSE  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  WORKING_STYLE.md  release.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
.kiro/settings/: lsp.json
.kiro/specs/adk-crate-adoption/: design.md  requirements.md  tasks.md
.kiro/specs/claude-code-capability-extraction/: design.md  requirements.md  tasks.md
.kiro/specs/cross-platform-npm-install/: design.md  requirements.md  tasks.md
.kiro/specs/provider-onboarding/: design.md  requirements.md  tasks.md
.kiro/specs/ralph-orchestrator-routing/: design.md  requirements.md  tasks.md
.kiro/specs/ralph-subagent-integration/: design.md  requirements.md  tasks.md  zavora-cli.code-workspace
Formula/: zavora-cli.rb
calculator/: README.md  calculator.py  cli.py  pyproject.toml
calculator/tests/: test_calculator.py
docs/: ADK_CAPABILITY_MATRIX.md  ADK_TARGET_ARCHITECTURE.md  AGILE_RELEASE_CYCLE.md  DIFFERENTIATION_ROADMAP.md  DISTRIBUTION.md  EVAL_BASELINE.md  GA_SIGNOFF.md  GA_SIGNOFF_v110.md  GITHUB_MILESTONE_ISSUES.md  GRAPH_WORKFLOWS.md  GUARDRAIL_POLICY.md  MCP_TOOLSET_MANAGER.md  MIGRATION_GUIDE_v1.md  MULTIAGENT_ARCHITECTURE.md  MULTIAGENT_COMPLETE.md  MULTIAGENT_INTEGRATION.md  OPERATOR_RUNBOOK.md  PARITY_BENCHMARK.md  PARITY_MATRIX.md  PERFORMANCE_RELIABILITY.md  PHASE2_QCLI_PARITY_PLAN.md  PROGRESS.md  PROJECT_OPTIMISATION.md  PROJECT_PLAN.md  QUALITY_GATES.md  RELEASE_CHECKLIST.md  RETRIEVAL_ABSTRACTION.md  SECURITY_HARDENING.md  SERVER_MODE.md  SPRINT_BACKLOG_RISK_REGISTER.md
evals/datasets/: retrieval-baseline.v1.json
evals/reports/: perf-reliability-baseline.v1.json  v0.3.1-baseline.json
npm/zavora-cli/: LICENSE  README.md  package.json
npm/zavora-cli/scripts/: install.js
scripts/: generate_homebrew_formula.sh  perf_reliability.sh  quality_gate.sh  security_check.sh
src/: agents.rs  benchmark.rs  chat.rs  checkpoint.rs  cli.rs  compact.rs  config.rs  context.rs  doctor.rs  error.rs  eval.rs  file_history.rs  guardrail.rs  hooks.rs  lib.rs  main.rs  markdown.rs  mcp.rs  mcp_auth.rs  mcp_server.rs  onboarding.rs  profiles.rs  provider.rs  ralph.rs  retrieval.rs  runner.rs  server.rs  session.rs  streaming.rs  telemetry.rs  tests.rs  theme.rs  todos.rs  tool_policy.rs  workflow.rs
src/agents/: file_loop.rs  memory.rs  mod.rs  orchestrator.rs  quality.rs  ralph_agent.rs  search.rs  sequential.rs  time.rs  tools.rs
src/lsp/: client.rs  manager.rs  mod.rs
src/tools/: bash_security.rs  browser.rs  confirming.rs  execute_bash.rs  file_edit.rs  fs_read.rs  fs_write.rs  github_ops.rs  glob.rs  grep.rs  lsp.rs  mod.rs  rag.rs  sandbox.rs  tool_search.rs  web_fetch.rs
tests/: hello.py  test_hello.py
