[package]
name = "zavora-cli"
version = "0.1.0"
edition = "2024"

[features]
default = []
semantic-search = ["dep:strsim"]

[dependencies]
adk-rust = { version = "0.3.0", features = ["openai", "anthropic", "deepseek", "groq", "ollama", "graph"] }
adk-session = { version = "0.3.0", features = ["database"] }
adk-tool = { version = "0.3.0", features = ["http-transport"] }
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strsim = { version = "0.11.1", optional = true }
toml = "0.8.19"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.25.0"
