[package]
name = "zavora-cli"
version = "1.1.4"
edition = "2024"
rust-version = "1.85"
description = "Rust CLI AI agent built on ADK-Rust with provider-aware runtime, workflow orchestration, and tool safety controls"
license = "MIT"
repository = "https://github.com/zavora-ai/zavora-cli"
authors = ["Zavora AI <info@zavora.ai>"]
keywords = ["cli", "ai", "agent", "adk", "llm"]
categories = ["command-line-utilities"]

[features]
default = []
semantic-search = ["dep:strsim"]
checkpoints = []

[dependencies]
adk-rust = { version = "0.3.0", features = ["openai", "anthropic", "deepseek", "groq", "ollama", "graph"] }
adk-session = { version = "0.3.0", features = ["database"] }
adk-tool = { version = "0.3.0", features = ["http-transport"] }
anyhow = "1.0.101"
axum = { version = "0.8.6", features = ["json"] }
clap = { version = "4.5.58", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3"
strsim = { version = "0.11.1", optional = true }
toml = "0.8.19"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
async-trait = "0.1.89"
crossterm = "0.28"
rustyline = "15"
similar = "2.7"
syntect = "5.2"
winnow = "0.7"

[dev-dependencies]
tempfile = "3.25.0"
