[package]
name = "zavora-cli"
version = "1.2.0"
edition = "2024"
rust-version = "1.85"
description = "Rust CLI AI agent built on ADK-Rust with provider-aware runtime, workflow orchestration, and tool safety controls"
license = "MIT"
repository = "https://github.com/zavora-ai/zavora-cli"
authors = ["Zavora AI <info@zavora.ai>"]
keywords = ["cli", "ai", "agent", "adk", "llm"]
categories = ["command-line-utilities"]

[features]
default = []
semantic-search = ["dep:strsim"]
checkpoints = []
web-fetch = ["dep:reqwest", "dep:htmd"]
oauth = ["dep:keyring", "dep:reqwest", "dep:sha2", "dep:rand", "dep:base64", "dep:open", "dep:url"]
browser = ["dep:adk-browser"]
sandbox = ["dep:adk-sandbox"]
rag = ["dep:adk-rag"]

lsp = ["dep:lsp-types"]

[dependencies]
adk-ralph = "0.5.0"
adk-rust = { path = "../adk-rust/adk-rust", features = ["openai", "anthropic", "deepseek", "groq", "ollama", "graph"] }
adk-session = { path = "../adk-rust/adk-session", features = ["database"] }
adk-skill = { path = "../adk-rust/adk-skill" }
adk-memory = { path = "../adk-rust/adk-memory", features = ["sqlite-memory"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
adk-telemetry = { path = "../adk-rust/adk-telemetry" }
adk-guardrail = { path = "../adk-rust/adk-guardrail" }
adk-browser = { path = "../adk-rust/adk-browser", optional = true }
adk-sandbox = { path = "../adk-rust/adk-sandbox", optional = true }
adk-rag = { path = "../adk-rust/adk-rag", optional = true }
adk-tool = { path = "../adk-rust/adk-tool", features = ["http-transport"] }
anyhow = "1.0.101"
axum = { version = "0.8.6", features = ["json"] }
chrono = "0.4"
clap = { version = "4.5.58", features = ["derive", "env"] }
md5 = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3"
strsim = { version = "0.11.1", optional = true }
lsp-types = { version = "0.97", optional = true }
reqwest = { version = "0.12", features = ["rustls-tls"], optional = true }
htmd = { version = "0.1", optional = true }
keyring = { version = "3", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.9", optional = true }
base64 = { version = "0.22", optional = true }
open = { version = "5", optional = true }
url = { version = "2", optional = true }
toml = "0.8.19"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
async-trait = "0.1.89"
crossterm = "0.28"
rustyline = "15"
similar = "2.7"
winnow = "0.7"
ignore = "0.4"
rmcp = { version = "1.3", features = ["transport-io"] }
schemars = "0.8"

[dev-dependencies]
tempfile = "3.25.0"

[profile.dev]
debug = 1  # line tables only (vs full debug = 2)
